syntax = "proto3";

package drones;

option go_package = "/pb";

message Action {
  oneof action {
    ActionApplyForce applyForce = 1;
  }
}

message ActionApplyForce {
  float x = 1;
  float y = 2;
  float torque = 3;
}