syntax = "proto3";

package drones;

option go_package = "/pb";

message Options {
  message CellPos {
    uint32 x = 1;
    uint32 y = 2;
  }

  message Maze {
    uint32 width = 1;
    uint32 height = 2;
    bytes walls = 3; // Bit array of walls (1 - Wall, 0 - Path)
    CellPos goal = 4;
  }

  message Drone {
    float width = 1;
    float height = 2;
    float weight = 3;
  }

  Maze maze = 1;
  uint32 cellSize = 2;
  Drone drone = 3;
  uint32 maxTicks = 4;
}

